--- a/index.html
+++ b/index.html
@@ -183,23 +183,82 @@ buildReel("reel3");
 
 /* FULL PROMO LIST */
 const promos=[
-{platform:"CrownCoins",bonus:60,wager:5,cashback:5,daily:1,expires:"2026-03-15"},
-{platform:"LoneStar Casino",bonus:105,wager:5,cashback:3,daily:1,expires:"2026-03-15"},
-{platform:"Stake.us",bonus:56,wager:3,cashback:8,daily:1,expires:"2026-03-20"},
-{platform:"McLuck Casino",bonus:30,wager:4,cashback:2,daily:1,expires:"2026-03-15"},
-{platform:"MegaBonanza",bonus:50,wager:4,cashback:1,daily:0.8,expires:"2026-03-12"},
-{platform:"Jackpota",bonus:35,wager:3,cashback:3,daily:1,expires:"2026-03-22"},
-{platform:"Sixty6 Casino",bonus:2,wager:6,cashback:0,daily:0.5,expires:"2026-03-10"},
-{platform:"SweepNext Casino",bonus:50,wager:4,cashback:2,daily:0.7,expires:"2026-03-18"},
-{platform:"Sweet Sweeps Casino",bonus:40,wager:5,cashback:2,daily:0.7,expires:"2026-03-14"},
-{platform:"Hello Millions",bonus:25,wager:4,cashback:1,daily:0.6,expires:"2026-03-15"},
-{platform:"Rolla Casino",bonus:30,wager:4,cashback:2,daily:0.8,expires:"2026-03-15"},
-{platform:"MyPrize.US",bonus:60,wager:3,cashback:3,daily:1,expires:"2026-03-20"},
-{platform:"Spree Casino",bonus:50,wager:4,cashback:2,daily:0.7,expires:"2026-03-16"},
-{platform:"Fortune Coins",bonus:20,wager:5,cashback:1,daily:0.4,expires:"2026-03-10"},
-{platform:"ACE.com Casino",bonus:2.5,wager:5,cashback:0,daily:0.5,expires:"2026-03-18"}
+{
+platform:"CrownCoins",
+url:"https://crowncoinscasino.com/?utm_campaign=e5a62c74-1909-4463-a6c8-f958748a9be4&utm_source=friends",
+bonus:60,wager:5,cashback:5,daily:1,expires:"2026-03-15"
+},
+{
+platform:"LoneStar Casino",
+url:"https://lonestarcasino.com/refer/1490917",
+bonus:105,wager:5,cashback:3,daily:1,expires:"2026-03-15"
+},
+{
+platform:"Stake.us",
+url:"https://stake.us/?c=n75tP6HL",
+bonus:56,wager:3,cashback:8,daily:1,expires:"2026-03-20"
+},
+{
+platform:"McLuck Casino",
+url:"https://mcluckcasino.com",
+bonus:30,wager:4,cashback:2,daily:1,expires:"2026-03-15"
+},
+{
+platform:"MegaBonanza",
+url:"https://www.megabonanza.com/?r=336854633",
+bonus:50,wager:4,cashback:1,daily:0.8,expires:"2026-03-12"
+},
+{
+platform:"Jackpota",
+url:"https://www.jackpota.com/?r=411608798",
+bonus:35,wager:3,cashback:3,daily:1,expires:"2026-03-22"
+},
+{
+platform:"Sixty6 Casino",
+url:"https://sixty6casino.com",
+bonus:2,wager:6,cashback:0,daily:0.5,expires:"2026-03-10"
+},
+{
+platform:"SweepNext Casino",
+url:"https://sweepnextcasino.com",
+bonus:50,wager:4,cashback:2,daily:0.7,expires:"2026-03-18"
+},
+{
+platform:"Sweet Sweeps Casino",
+url:"https://sweetsweepscasino.com",
+bonus:40,wager:5,cashback:2,daily:0.7,expires:"2026-03-14"
+},
+{
+platform:"Hello Millions",
+url:"https://hellomillions.com",
+bonus:25,wager:4,cashback:1,daily:0.6,expires:"2026-03-15"
+},
+{
+platform:"Rolla Casino",
+url:"https://rollacasino.com",
+bonus:30,wager:4,cashback:2,daily:0.8,expires:"2026-03-15"
+},
+{
+platform:"MyPrize.US",
+url:"https://myprize.us",
+bonus:60,wager:3,cashback:3,daily:1,expires:"2026-03-20"
+},
+{
+platform:"Spree Casino",
+url:"https://spreecasino.com",
+bonus:50,wager:4,cashback:2,daily:0.7,expires:"2026-03-16"
+},
+{
+platform:"Fortune Coins",
+url:"https://fortunecoins.com",
+bonus:20,wager:5,cashback:1,daily:0.4,expires:"2026-03-10"
+},
+{
+platform:"ACE.com Casino",
+url:"https://ace.com",
+bonus:2.5,wager:5,cashback:0,daily:0.5,expires:"2026-03-18"
+}
 ];
-
 function calculateValueScore(p){
 return ((p.bonus+(p.daily*7))/p.wager+(p.cashback/10)).toFixed(2);
 }
@@ -218,7 +277,11 @@ const score=calculateValueScore(p);
 const risk=riskLevel(p.wager);
 table.innerHTML+=`
 <tr class="border-b border-gray-800">
-<td class="p-3 font-semibold">${p.platform}</td>
+<td class="p-3 font-semibold">
+<a href="${p.url}" target="_blank" class="text-blue-400 hover:text-blue-300 hover:underline">
+${p.platform}
+</a>
+</td>
 <td class="p-3">$${p.bonus}</td>
 <td class="p-3">${p.wager}x</td>
 <td class="p-3">${p.cashback}%</td>
@@ -241,3 +304,4 @@ renderTable(promos);
 
 </body>
 </html>
+
