--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sweeps Snapshot Pro</title>
+<title>Sweeps Snapshot Pro | Sweepstakes Casino Bonus & Wagering Comparison Tool</title>
+  <!-- SEO META -->
+<meta charset="UTF-8">
+<meta name="description" content="Sweeps Snapshot Pro tracks sweepstakes casino bonuses, wagering requirements, cashback offers, and edge value scoring to help players compare promotions intelligently.">
+<meta name="keywords" content="sweepstakes casinos, sweeps casino bonuses, wagering requirements, sweepstakes comparison tool, casino promo tracker, sweeps value score">
+<meta name="author" content="A Townsend Solution">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph (for sharing previews) -->
+<meta property="og:title" content="Sweeps Snapshot Pro - Sweepstakes Casino Bonus Tracker">
+<meta property="og:description" content="Compare sweepstakes casino bonuses, wagering requirements, cashback rates, and value scores in one place.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://sweeps.tradelotdeals.com">
+<meta property="og:image" content="https://sweeps.tradelotdeals.com/logo.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Sweeps Snapshot Pro">
+<meta name="twitter:description" content="Compare sweepstakes casino bonuses and value scores intelligently.">
+<meta name="twitter:image" content="https://sweeps.tradelotdeals.com/logo.png">
 <script src="https://cdn.tailwindcss.com"></script>
 
 <style>
@@ -64,6 +83,20 @@ html,body{
   to{box-shadow:0 0 25px rgba(0,255,0,0.7);}
 }
 </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Sweeps Snapshot Pro",
+  "description": "A comparison tool for sweepstakes casino bonuses, wagering requirements, cashback rates, and value scoring.",
+  "applicationCategory": "FinanceApplication",
+  "operatingSystem": "Web",
+  "author": {
+    "@type": "Organization",
+    "name": "A Townsend Solution"
+  }
+}
+</script>
 </head>
 
 <body>
@@ -301,6 +334,25 @@ renderTable(promos.filter(p=>p.platform.toLowerCase().includes(value)));
 renderTable(promos);
 
 </script>
+  <section class="max-w-3xl mx-auto mt-16 text-gray-300 text-sm sm:text-base leading-relaxed px-4">
+
+<h2 class="text-xl font-semibold mb-4 text-white">
+What Is Sweeps Snapshot Pro?
+</h2>
+
+<p class="mb-4">
+Sweeps Snapshot Pro is a sweepstakes casino comparison tool that analyzes promotional bonuses, wagering requirements, cashback percentages, and daily reward values to generate an objective value score.
+</p>
+
+<p class="mb-4">
+Instead of manually comparing multiple sweepstakes casino offers, players can use this tool to quickly evaluate potential edge, risk level, and rollover impact.
+</p>
+
+<p>
+This tool is provided by A Townsend Solution and is designed for informational comparison purposes only.
+</p>
+
+</section>
 <footer class="border-t border-gray-800 mt-12 pt-6 pb-8 text-center text-sm text-gray-400">
 
   <div class="mb-3">
@@ -333,5 +385,6 @@ document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
+
 
 
