--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><?xml version="1.0" encoding="UTF-8"?>
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+  <url>
+    <loc>https://sweeps.tradelotdeals.com/</loc>
+    <priority>1.0</priority>
+  </url>
+</urlset>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sweeps Snapshot Pro | Sweepstakes Casino Bonus & Wagering Comparison Tool</title>
   <!-- SEO META -->
@@ -385,6 +391,7 @@ document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
+
 
 
 
