--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ This tool is provided by A Townsend Solution and is designed for informational c
        rel="noopener noreferrer"
        class="inline-flex items-center gap-2 text-blue-400 hover:text-blue-300 hover:underline">
        
-      Visit illbid.com
+      For the Best Prices on the Internet Visit illbid.com
       
       <!-- External Link Icon -->
       <svg xmlns="http://www.w3.org/2000/svg" 
@@ -391,6 +391,7 @@ document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
+
 
 
 
