--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ bonus:40,wager:5,cashback:2,daily:0.7,expires:"2026-03-14"
 },
 {
 platform:"Hello Millions",
-url:"https://hellomillions.com",
+url:"https://www.hellomillions.com/lp/raf?r=aaa5691e%2F2187439757",
 bonus:25,wager:4,cashback:1,daily:0.6,expires:"2026-03-15"
 },
 {
@@ -391,6 +391,7 @@ document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
+
 
 
 
